@@ -8,7 +8,7 @@ Note: You are looking in the wrong place if you intend to compile a
 This distribution contains the source for the slang library, a
 ``slang-shell'' program called slsh, and dynamically loadable modules
 that may be ``imported'' into the interpreter.  Be sure to install all
-3 compnents.
+3 components.
 
 ---------------------------------------------------------------------
                            Prerequisites
@@ -36,7 +36,7 @@ On a Debian system, these libraries can be installed using:
   apt-get install libpng12-dev zlib1g-dev libpcre3-dev libonig-dev
 
  (Double check the package names-- the ones quoted above are
-   appropriate for Debian lenny)
+   appropriate for Debian Lenny)
 
 If you have these installed in non-standard places and the configure
 script cannot find them, then run configure with the "--with-pcre" and
@@ -70,7 +70,7 @@ src/elfobjs.  Using
 will build a static version of the library in src/objs.  By default,
 `make` builds the shared version of the library.
 
-The 'runtests' step is designed to test the interpeter.  It uses the
+The 'runtests' step is designed to test the interpreter.  It uses the
 static version of the library for this.
 
   ***Note: If you are installing the library for other users, be sure
@@ -80,7 +80,7 @@ static version of the library for this.
 	      umask 022
 	      make install
 
-  ***Note: If you have the png or pcre libraries installed in a
+  ***Note: If you have the png, pcre, etc libraries installed in a
 	   non-standard location, e.g., /opt/software, then the script
 	   may not be able to find them.  The locations may be
 	   specified using, e.g.,
@@ -101,21 +101,31 @@ static version of the library for this.
            interface.  To use GNU readline use the --with-readline=gnu
 	   option.
 
- ***Note: If the ARCH environment variable is set, the library will be
-	  placed in src/${ARCH}objs and src/elf${ARCH}objs.  For
-	  example, if ARCH is set to `sun4', then libslang.a and *.o
-	  will appear in src/sun4objs.
+ ***Note: Object files are placed in subdirectories with names
+          ${ARCH}objs and ${ARCH}elfobjs, where ${ARCH} is set from
+	  the environment.  This may be exploited for the purposes of
+	  building the library for multiple architectures.  For
+	  example, one might use ARCH=sun4 for a Sun 4 system, and
+	  ARCH=i686 on a Linux system with a 32 bit processor.
+
+	  In principle, any file generated by the configure process is
+	  architecture specific and should be placed in an
+	  architecture-specific directory.  This is currently not
+	  supported by the configure script.  For this reason, when
+	  building for a different architecture, the configure script
+	  must be re-run.  
 
  ***Note: This package does not support the --srcdir command line
           option.  This option is typically used to compile separate
 	  versions of the library.  If your intent is to do something
-	  like:
+	  like
 
 	       mkdir foo; cd foo; ../configure --srcdir=..; make
 
-	  then use (csh syntax)
+          then after reading the previous note, try:
 
-	       setenv ARCH foo; ./configure; make
+	       setenv ARCH foo; ./configure; make         (csh syntax)
+               ARCH=foo; export ARCH; ./configure make    (/bin/sh)
 
           The reason that --srcdir is not supported is that it fails
 	  in the presence of symbolic links, e.g.,
